WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192555
[iOS] Unable to upload data that conforms to "public.item" but not "public.content"
https://bugs.webkit.org/show_bug.cgi?id=192555
Summary
[iOS] Unable to upload data that conforms to "public.item" but not "public.co...
Wenson Hsieh
Reported
2018-12-10 08:27:58 PST
<
rdar://problem/35204990
>
Attachments
Patch
(7.97 KB, patch)
2018-12-10 08:43 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2018-12-10 08:28:26 PST
For example: .p12 files
Wenson Hsieh
Comment 2
2018-12-10 08:43:34 PST
Created
attachment 356961
[details]
Patch
Tim Horton
Comment 3
2018-12-10 14:08:05 PST
Comment on
attachment 356961
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=356961&action=review
> Tools/ChangeLog:10 > + Add a test to verify that `.p12` files may be uploaded as files via drag and drop. "com.rsa.pkcs-12" is an > + example of a data type that conforms to "public.item", but not "public.content"; before this patch, we would
Super weird.
Wenson Hsieh
Comment 4
2018-12-10 14:09:10 PST
Comment on
attachment 356961
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=356961&action=review
>> Tools/ChangeLog:10 >> + example of a data type that conforms to "public.item", but not "public.content"; before this patch, we would > > Super weird.
Quite!
WebKit Commit Bot
Comment 5
2018-12-10 14:18:19 PST
Comment on
attachment 356961
[details]
Patch Clearing flags on attachment: 356961 Committed
r239053
: <
https://trac.webkit.org/changeset/239053
>
WebKit Commit Bot
Comment 6
2018-12-10 14:18:20 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug